// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Storyshots default default 1`] = `
<div
  data-css-claeju=""
>
  <div>
    <div
      className="css-list--list-we2016"
      onKeyDown={[Function]}
      role="tablist"
      tabIndex="0"
    >
      <button
        aria-selected={true}
        className="css-list-item--listitem-1ntycy4"
        id="example1"
        onClick={[Function]}
        role="tab"
        tabIndex="-1"
      >
        <div
          className="css-list-item--textwidth-t99l5y"
        >
          Menu 1
          <span
            className="css-list-item--bar-19nw636"
          />
        </div>
      </button>
      <button
        aria-selected={false}
        className="css-list-item--listitem-3qhjek"
        id="example2"
        onClick={[Function]}
        role="tab"
        tabIndex="-1"
      >
        <div
          className="css-list-item--textwidth-t99l5y"
        >
          Menu 2
          <span
            className="css-list-item--bar-19nw636"
          />
        </div>
      </button>
      <button
        aria-selected={false}
        className="css-list-item--listitem-3qhjek"
        id="example3"
        onClick={[Function]}
        role="tab"
        tabIndex="-1"
      >
        <div
          className="css-list-item--textwidth-t99l5y"
        >
          Menu 3
          <span
            className="css-list-item--bar-19nw636"
          />
        </div>
      </button>
      <button
        aria-selected={false}
        className="css-list-item--listitem-3qhjek"
        id="example4"
        onClick={[Function]}
        role="tab"
        tabIndex="-1"
      >
        <div
          className="css-list-item--textwidth-t99l5y"
        >
          Menu 4
          <span
            className="css-list-item--bar-19nw636"
          />
        </div>
      </button>
      <button
        aria-selected={false}
        className="css-list-item--listitem-3qhjek"
        id="example5"
        onClick={[Function]}
        role="tab"
        tabIndex="-1"
      >
        <div
          className="css-list-item--textwidth-t99l5y"
        >
          Menu 5
          <span
            className="css-list-item--bar-19nw636"
          />
        </div>
      </button>
    </div>
    <div
      aria-labelledby="example3"
      className="css-panel--panel-14a04t2"
      role="tabpanel"
    >
      <div
        className="content"
      >
        Menu stuff 3
      </div>
    </div>
  </div>
</div>
`;

exports[`Storyshots default no items 1`] = `
<div
  data-css-claeju=""
>
  <div
    className="css-list--list-we2016"
    onKeyDown={[Function]}
    role="tablist"
    tabIndex="0"
  />
</div>
`;

exports[`Storyshots style overrides list no borderBottom (style) 1`] = `
<div
  data-css-claeju=""
>
  <div
    className="css-list--list-we2016"
    onKeyDown={[Function]}
    role="tablist"
    style={
      Object {
        "borderBottom": "none",
      }
    }
    tabIndex="0"
  >
    <button
      aria-selected={true}
      className="css-list-item--listitem-1ntycy4"
      id="wow"
      onClick={[Function]}
      role="tab"
      tabIndex="-1"
    >
      <div
        className="css-list-item--textwidth-t99l5y"
      >
        Wow
        <span
          className="css-list-item--bar-19nw636"
        />
      </div>
    </button>
  </div>
</div>
`;

exports[`Storyshots style overrides listItem disabled opacity (style) 1`] = `
<div
  data-css-claeju=""
>
  <div
    className="css-list--list-we2016"
    onKeyDown={[Function]}
    role="tablist"
    tabIndex="0"
  >
    <button
      aria-selected={true}
      className="css-list-item--listitem-1ntycy4"
      id="wow"
      onClick={[Function]}
      role="tab"
      style={
        Object {
          "opacity": 0.5,
        }
      }
      tabIndex="-1"
    >
      <div
        className="css-list-item--textwidth-t99l5y"
      >
        Disabled look
        <span
          className="css-list-item--bar-19nw636"
        />
      </div>
    </button>
  </div>
</div>
`;

exports[`Storyshots style overrides panel disabled opacity (style) 1`] = `
<div
  data-css-claeju=""
>
  <div>
    <div
      className="css-list--list-we2016"
      onKeyDown={[Function]}
      role="tablist"
      tabIndex="0"
    >
      <button
        aria-selected={true}
        className="css-list-item--listitem-1ntycy4"
        id="wow"
        onClick={[Function]}
        role="tab"
        style={
          Object {
            "opacity": 0.5,
          }
        }
        tabIndex="-1"
      >
        <div
          className="css-list-item--textwidth-t99l5y"
        >
          Disabled look
          <span
            className="css-list-item--bar-19nw636"
          />
        </div>
      </button>
    </div>
    <div
      aria-labelledby="wow"
      className="css-panel--panel-14a04t2"
      role="tabpanel"
      style={
        Object {
          "border": "1px solid red",
        }
      }
    >
      This is the content
    </div>
  </div>
</div>
`;
